data/css/welcome.css
/* ... */
.btn-rpi:active,
.btn-rpi.active {
  background-color: #C6053D \9;
}

/* Shows a notification in the top-right corner */
.heads-up {
  position: fixed;
  top: 8px;
  right: 8px;
  z-index: 11;
  font-size: 16px;
  text-align: right;
}

/************************
 * Splash Screen
*************************/
/* Scene A */
.splashCenter {
  text-align: center;
  vertical-align: middle;
  position: absolute;
  z-index: -1;
  margin: auto;
  top: 0; left: 0; bottom: 0; right: 0;
  margin-top: -50px;
  width: 446px; height: 459px;
  pointer-events: none;
}

.splashText {
  font-family: "Ubuntu";
  font-weight: 100;
  font-size: 64px;
  color: #fff;
  position: relative;
  top: 30%;
}

#splash-multilingual {
  position: absolute;
  top: 50%;
  width: 640px;
  height: 190px;
  left: 0; right: 0;
  margin: auto;
  font-size: 20px;
  color: #909090;
  text-align: center;
  line-height: 32px;
}

.bootCircle {
  background: #8ba34f;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  display: inline-table;
}

.bootCircleBlock {
  width: 16px;
  height: 16px;
  display: inline-table;
  margin: 0;
  padding: 0;
}

/* Scene B */
#sceneB {
  position: absolute;
  top: -50px; bottom: 0; left: 0; right: 0;
  width: 400px;
  height: 180px;
  margin: auto;
  text-align: center;
}

.splashVersion {
  vertical-align: top;
  font-weight: bold;
  font-size: 20px;
  color: #5A6943;
  pointer-events: none;
}

/* Background */
@-webkit-keyframes fadeToMenu {
  from { background-color: #3B3A36; }
  to   { background-color: #f4f4f4; }
}

.fadeToMenu {
  -webkit-animation-fill-mode: forwards;
  -webkit-animation: fadeToMenu 1s ease-in-out;
}

/************************
 * Getting Started - Push Menu (Index)
*************************/
#index-menu {
  height: 100%;
  width: 200px;
  top: 0;
  left: 0;
  bottom: 0;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 60px;
  padding-bottom: 50px;
  position: fixed;
  background: rgba(65,65,65,0.95);
  border: 2px solid #000;
  color: #fff;
  z-index: 9;
}

.index-btn {
  width: 172px;
}

#index-close {
  float: right;
  position: relative;
  text-align: right;
  color: #fff;
}

.topicContents { margin-bottom: 16px; }

#index-overlay {
  background-color: rgba(0,0,0,0.5);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: default;
  z-index: 8;
}

/************************
 * Getting Started - System Specifications
*************************/
.specs-icon {
  top: 100px; bottom: 0;
  left: 4%;
  width: 20%;
  height: auto;
  margin: auto;
  position: absolute;
}

#specs-loading {
  width: 80%;
  height: 25px;
  top: 100px; bottom: 0; left: 0; right: 0;
  margin: auto;
  position: absolute;
  text-align: center;
}

.specs-box {
  padding: 4px;
  position: absolute;
}

.specs-box h4 {
  color: #758A53;
}

.specs-1 {
  top: 200px;
  left: 26%;
  height: 20%;
  width: 35%;
}

.specs-2 {
  top: 58%;
  left: 26%;
  height: 20%;
  width: 35%;
}

.specs-3 {
  top: 200px;
  right: 2%;
  height: 20%;
  width: 35%;
}

.specs-4 {
  top: 58%;
  right: 2%;
  height: 20%;
  width: 35%;
}

.specs-error {
  color: #FF0000;
}

/************************
 * Hello Page
*************************/
#hello-page {
  padding-left: 350px;
}

#hello-image {
  position: absolute;
  left: -200px;
  height: 450px;
  width: auto;
  z-index: -1;
  overflow: hidden;
}

#hello-header {
  font-weight: lighter;
  padding-top: 8px;
  padding-bottom: 8px;
  overflow: hidden;
}

.hello p {
  padding-top: 8px;
  padding-bottom: 8px;
}

